# XEdgeConv

./: LICENSE  README.md  nnUNetTrainerV2_SymPermutation.py  nnUNetTrainerV2_XEdgeConvMax.py  nnUNetTrainer_SymPermuteConv.py  nnUNetTrainer_XEdgeConv.py  pyproject.toml
